Fix text not overlapping in figure captions (closes #9)

--- a/www/css/northall.css
+++ b/www/css/northall.css
@@ -57,7 +57,7 @@ body {
 }
 
 .image-gallery {
-	line-height: 0;
+	line-height: auto;
 	column-count: 3;
 	column-gap: 5px;
 }
@@ -71,11 +71,12 @@ body {
 .image-gallery figure {
 	border-radius: 10px;
 	padding: 5px;
-	padding-bottom: 15px;
+	padding-bottom: 5px;
 	background-color: #2c3e50;
 }
 
-.image-gallery .figure-caption {
+.image-gallery .image-gallery-caption {
+	text-align: center;
 	color: #fff;
 }
 
